# VaultX

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  index.html  package.json  password-manager-plan.md  pnpm-lock.yaml  quick-access.html  vite.config.ts
.github/workflows/: release.yml
docs/: design-spec.md  product-spec.md  spec.md
docs/plans/: README.md  m1-lock-unlock-store.md  m2-search-quickaccess.md  m3-security-polish.md  m4-quality-hardening.md
src/: App.tsx  quick-access.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  entries.rs  mod.rs  recovery.rs  search.rs  security.rs  settings.rs
src-tauri/src/crypto/: encryption.rs  key_derivation.rs  mod.rs
src-tauri/src/db/: connection.rs  mod.rs  queries.rs  schema.rs  search.rs
src-tauri/tests/: auth_flow.rs  entry_flow.rs
src/components/entry/: ContextMenu.tsx  EntryCard.tsx  EntryDetail.tsx  EntryForm.tsx  PasswordGenerator.tsx
src/components/layout/: DetailPanel.tsx  EntryList.tsx  Sidebar.tsx  ThreePanel.tsx
src/components/lock/: LockScreen.tsx  SetupWizard.tsx
src/components/search/: QuickAccess.tsx  SearchBar.tsx
src/components/settings/: SettingsPanel.tsx
src/components/ui/: Button.tsx  (+9 more)
src/i18n/: en.ts  index.tsx  types.ts  zh-CN.ts
src/lib/: commands.ts
src/stores/: appStore.ts  searchStore.ts  settingsStore.ts  vaultStore.ts
src/styles/: globals.css
src/test/: App.test.tsx  LockScreen.test.tsx  SetupWizard.test.tsx  setup.ts  test-utils.tsx  vaultStore.test.ts
