[package]
name = "vaultx"
version = "0.1.0"
description = "A local-first password manager"
authors = ["VaultX"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vaultx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"

# Crypto
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

# Database
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
arboard = "3"
tauri-plugin-global-shortcut = "2"

# macOS Touch ID + Keychain
core-foundation = "0.9"
security-framework-sys = "2"
objc2 = "0.5"

[dev-dependencies]
tempfile = "3"
